--- a/Webpage/style.css
+++ b/Webpage/style.css
@@ -8,16 +8,33 @@ html,
 body {
     padding: 0;
     background: #fff;
+    height: 100%
 }
 
-.body {
+.site {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    height: 100%;
+}
+
+.site-body {
     margin-top: 32px;
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+.site-element {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .tab {
     width: 80%;
     font-family: 'Times New Roman', serif;
-    margin: auto;
 }
 
 .bar.buttons.menu {
@@ -40,10 +57,7 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
-footer {
-    position: fixed;
-    left: 0;
-    bottom: 0;
+.site-footer {
     width: 100%;
     background-color: #EEE;
     color: #444;
@@ -101,7 +115,7 @@ li {
     color: #FFF;
     cursor: pointer;
     display: inline-block;
-    font-family: -apple-system, system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
+    font-family: system-ui, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
     font-size: 14px;
     font-weight: 500;
     line-height: 20px;
